# Eshu

./: Dockerfile  Dockerfile.simple_operator  LICENSE  README.md  docker-compose.yml  pyproject.toml
example_files/: example.py  sample_config.toml  simple.toml
improvedOp/: Dockerfile  docker-compose.yml  pyproject.toml
improvedOp/operator/: Dockerfile
improvedOp/src/: README.md  app.py
metasploit-lab/: docker-compose.yml
metasploit-lab/operator/: Dockerfile  supervisord.conf
metasploit-lab/operator/api/: api_class.py  app.py  app_class.py  flask_app.py
metasploit-lab/operator/src/: api_class.py  flask_app.py
nathan/config_files/: msf_config.env
nathan/operator/: Dockerfile
operator/: Dockerfile  main.py  pyproject.toml
operator/Eshu/: __init__.py  frontend.py
operator/Eshu/baseC2/: base_C2.py
operator/Eshu/c2/: __init__.py  backend.py
operator/Eshu/c2/msf/: __init__.py  metasploit.py
operator/Eshu/c2/sliver/: __init__.py  bfsliver.py
operator/config_files/: msfconsole.rc  sliver_config.env
original/metasploit-lab/metasploitable2/: Dockerfile
sliver/: Dockerfile
src/: app.py  app_class.py  flask_app.py  main.py  pyproject.toml
src/Eshu/: __init__.py  frontend.py
src/Eshu/baseC2/: base_C2.py
src/Eshu/c2/: __init__.py
src/Eshu/c2/msf/: __init__.py  metasploit.py
src/Eshu/c2/sliver/: __init__.py  bfsliver.py
src/config_files/: msf_config.env
src/eshu/: __init__.py  base_C2.py  orchestrator.py
src/eshu/c2s/msf/: metasploit.py
src/eshu/c2s/sliver/: bfsliver.py
test-env/: Dockerfile
