[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eshu"
version = "0.0.1"
description = "Eshu is a common language platform for post-exploitation between multiple C2 frameworks."
authors = [
    { name = "Alexander Aviles" },
    { name = "Yousif Alsabah" },
    { name = "Xun-Yang Leong" },
    { name = "Alan Ingersoll" },
    { name = "Prateek Ravindran" }
]
license = { text = "ProDefense" }

[tool.setuptools]
packages = ["Eshu", "Eshu.c2", "Eshu.baseC2"]

[project.scripts]
eshu = "Eshu.frontend:main"